--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.0.1",
-    "vite-plugin-pwa": "^0.21.0"
+    "vite": "5.4.1",
+    "vite-plugin-pwa": "0.21.0"
   }
 }
